== Change Log

=== Edge

* Move url methods to path [Jim Gay]
* Allow use of custom TextFilter names[Petrik de Heus]
* Set autocomplete="off" for password fields [Gert Goet]
* Allow loading of database templates from extensions [Jim Gay]
* Restore Roasters template styling [Jim Gay]
* Integrated PageFields extension into core [Josh French]
* Added the Sheets extension to manage Javascript and Stylesheets [Jim Gay]
* Page-type select menu moved to Pages#index [Josh French]
* Allow gem-extensions to override core views [Josh French]
* Popup.js fix for multiple control instances [Josh French]

=== Refraction 0.9.1 (June 27, 2010)

* Added missing i18n translations for aggregate tages [Jim Gay]
* Fixed a bug with status_id PostgreSQL [Jim Gay]

=== Refraction 0.9.0 (June 25, 2010)

* Pull in aggregate tags from the aggregation extension [John Muhl, Sean Cribbs, Jim Gay]
* Fixed a bug which could cause the preferences submenu to dissapear [Mario Visic, Jim Gay]
* Fixed a bug PostgreSQL for creating pages with nested attributes [Andrew Cates]
* Updated to Rails 2.3.8 [Jim Gay]
* Added admin and Radius tag pagination [William Ross]
* Added will_paginate dependency [William Ross, Jim Gay]
* Added <r:gravatar/> radius tag [John Muhl]
* Exposed important view locals for partials that hook into the admin UI [Mislav Marohnić]
* Update to cucumber-rails 0.3.0 [Jim Gay]
* Update to Haml 2.2.24 [Jim Gay]
* Allow loading extension routes from the extension's config/routes.rb [Jim Gay]
* Cache admin.js in update task [Janne Asmala]
* Finally rename User.protected_attributes to unprotected_attributes [Jim Gay]
* Support i18n [Keith Bingman, many others]
* Only run migrate and update tasks with script/extension if they exist [John Muhl, Jim Gay]
* Dropped BlueCloth for kramdown [John Muhl]
* Updated sample images for Textile and Markdown [Jim Gay]
* Refactored Sass to separate out common styles [Jim Gay]
* Upgraded to HAML 2.2.19 [Jim Gay]