@@ -547,6 +547,12 @@ describe Page, "class" do
     end
     Page.is_descendant_class_name?("InvalidPage").should == false
   end
+
+  describe ".date_column_names" do
+    it "should return an array of column names whose sql_type is a date or datetime" do
+      Page.date_column_names.should == Page.columns.collect{|c| c.name if c.sql_type =~ /date/ }.compact
+    end
+  end
 end
 
 describe Page, "loading subclasses before bootstrap" do
