@@ -2,6 +2,7 @@
 
 === Edge
 
+* Make any date column a valid value for <r:date /> [Jim Gay]
 * Move url methods to path [Jim Gay]
 * Allow use of custom TextFilter names[Petrik de Heus]
 * Set autocomplete="off" for password fields [Gert Goet]
